--- a/1korak.css
+++ b/1korak.css
@@ -1,3 +1,13 @@
 #jahaci{
     display: inline;
 }
+#jahaci{
+    color: #000;
+    border-bottom: 2px solid #455372;
+    margin-top: 50px;
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    padding: 1px;
+    padding-left: 30px;
+}
